# 
#  Copyright 
# 

### tools
SET(tools
	test_shell
)

FOREACH(tool_name ${tools})
	SET(EXECUTABLE_NAME ${tool_name})

	ADD_DEFINITIONS(-DDEBUG=2)

	ADD_EXECUTABLE(${EXECUTABLE_NAME}
	  ${tool_name}.cpp)
	
	INCLUDE_DIRECTORIES(
		${CMAKE_CURRENT_SOURCE_DIR}/../include 
	)

	LINK_DIRECTORIES(${${PROJECT_NAME}_BINARY_DIR}/lib)

	TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}
	  ${PROJECT_NAME}
	  dl)
	  
	INSTALL(TARGETS ${tool_name}
		DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${PROJECT_NAME})
ENDFOREACH(tool_name)